--- a/MoviesAPI/appsettings.Development.json
+++ b/MoviesAPI/appsettings.Development.json
@@ -2,6 +2,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "MoviesAPI": "Warning",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   }
